--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^20.10.4",
     "@vitejs/plugin-vue": "^5.0.0",
     "@vue/test-utils": "^2.4.1",
+    "terser": "^5.44.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.5",
     "vitest": "^1.0.4",
